--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -306,11 +306,13 @@ ul {
     align-items: center;
     height: 100%;
     max-width: 320px;
+    position: relative;
 }
 
 .header-logo img {
-    width: 100%;
-    height: 100%;
+    position: absolute;
+    width: 120px;
+    height: 80px;
     object-fit: contain;
 }
 
@@ -843,7 +845,7 @@ ul {
     width: 100%;
     max-width: 992px;
     height: calc(100vh - 90px);
-    background: var(--white-color);
+    background: var(--Soft-black);
     overflow-y: auto;
     transform: translateX(100%);
     transition: transform 0.4s ease-in-out;
@@ -915,7 +917,7 @@ ul {
     width: 100%;
     max-width: 992px;
     height: calc(100vh - 90px);
-    background: var(--white-color);
+    background: var(--Soft-black);
     overflow-y: auto;
     transform: translateX(100%);
     transition: transform 0.4s ease-in-out;
@@ -931,18 +933,22 @@ ul {
     font-style: normal;
     font-weight: 400;
     line-height: 24px;
-    color: #009899;
+    color: var(--white-color);
+}
+
+.mobile-nav-box .dropdown-header p span {
+    color: var(--Blue-bright);
 }
 
 .mobile-nav-box .dropdown-header h6 {
-    font-family: "League Spartan", sans-serif;
-    font-size: 20px;
+    color: var(--white-color);
+    font-family: "League Spartan";
+    font-size: 18px;
     font-style: normal;
-    font-weight: 700;
+    font-weight: 600;
+    line-height: normal;
     padding: 20px 0px 0px 0;
-    letter-spacing: 1px;
-    text-transform: uppercase;
-    color: #000 !important;
+    color: var(--white-color) !important;
 }
 
 .mobile-nav-box .dropdown-menu-link {
@@ -960,7 +966,7 @@ ul {
 }
 
 .mobile-nav-box ul {
-    padding-left: 56px;
+    padding-left: 40px;
 }
 
 .mobile-nav-box ul li {
@@ -968,8 +974,8 @@ ul {
 }
 
 .dropdown-header {
-    padding-left: 56px;
-    padding-right: 56px;
+    padding-left: 40px;
+    padding-right: 40px;
 }
 
 .mobile-header-parent {
@@ -1028,13 +1034,13 @@ ul {
 }
 
 .header-bg {
-    border-bottom: 1px solid #EEE;
-    background: #FFF;
+    border-bottom: 1px solid var(--Soft-black);
+    background: var(--Soft-black);
 }
 
 .custom-toggle-icon span.fa {
     font-size: 30px;
-    color: var(--Soft-black);
+    color: var(--white-color);
 }
 
 .custom-nav-link {
@@ -1065,28 +1071,51 @@ ul {
 
 .submenu-nav-link {
     display: block;
-    padding: 15px 0;
-    color: var(--Soft-black);
-    font-family: "League Spartan", sans-serif;
-    font-size: 20px;
+    padding: 13px 0;
+    color: var(--white-color);
+    font-family: "League Spartan";
+    font-size: 18px;
     font-style: normal;
-    font-weight: 700;
-    line-height: 24px;
-    letter-spacing: 1px;
-    text-transform: uppercase;
+    font-weight: 600;
+    line-height: normal;
 }
 
 .submenu-nav-link:hover {
-    color: var(--Soft-black);
+    color: var(--white-color);
+}
+
+.menu-content-box {
+    padding: 15px 0;
 }
 
 .dropdown-menu-link {
-    color: var(--Soft-black);
+    color: var(--white-color);
     font-family: "League Spartan", sans-serif;
     font-size: 16px;
     font-style: normal;
     font-weight: 400;
     line-height: 24px;
+}
+
+.menu-logo-box {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    padding: 20px 40px;
+    flex-wrap: wrap;
+}
+
+.menu-logo-box .menu-logo {
+    max-width: calc(100% / 4);
+    padding: 15px 10px;
+    width: 100%;
+
+}
+
+.menu-logo-box .menu-logo img {
+    width: 100%;
+    height: auto;
+    object-fit: contain;
 }
 
 .dropdown-menu-link:hover {
@@ -2730,5 +2759,25 @@ footer {
 
     .mobile-header {
         display: block;
+    }
+
+    .dropdown-header {
+        padding-left: 40px;
+        padding-right: 40px;
+    }
+}
+
+@media screen and (max-width: 576px) {
+    .menu-logo-box .menu-logo {
+        max-width: calc(100% / 3);
+    }
+}
+
+
+
+@media screen and (max-width: 500px) {
+    .menu-logo-box .menu-logo {
+        max-width: calc(100% / 2);
+        width: 100%;
     }
 }
