--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,6 +23,20 @@ a {
   text-decoration: none;
 }
 
+/* Hide number input spinners (counter buttons) */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button,
+textarea::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  appearance: none;
+  margin: 0;
+}
+
+input[type=number] {
+  -moz-appearance: textfield;
+  appearance: textfield;
+}
+
 a:hover {
   text-decoration: none;
   color: unset;
@@ -789,7 +803,7 @@ text-transform: uppercase;
   line-height: normal;
   outline: none;
   background: transparent;
-  margin-bottom: 14px;
+  margin-bottom: 5px;
   color: #000;
 }
 
