--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -68,6 +68,10 @@ a:hover {
   margin-top: 30px;
 }
 
+.py-40 {
+  padding-top: 40px;
+  padding-bottom: 40px;
+}
 .py-80 {
   padding-top: 80px;
   padding-bottom: 80px;
@@ -187,7 +191,7 @@ ul {
   font-size: 40px;
   font-style: normal;
   font-weight: 600;
-  line-height: 48px;
+  line-height: 40px;
   margin-bottom: 24px;
   text-transform: uppercase;
 }
@@ -1861,6 +1865,67 @@ line-height: 28px;
   background: var(--Soft-black, #111);
 }
 
+/* --------proshop---------------- */
+.proshop-banner-content .banner-title{
+  color: #000;
+  margin-bottom: 24px;
+}
+.proshop-banner-content .banner-subtitle{
+  color: #000;
+  font-size: 24px;
+  margin-bottom: 24px;
+}
+.proshop-banner-content .banner-desc{
+  margin-bottom: 40px;
+}
+
+.proshop-cards-sec {
+    padding: 40px 0;
+}
+
+.proshop-card {
+    position: relative;
+    height: 520px;
+    width: 100%;
+    margin-bottom: 30px;
+    overflow: hidden;
+    display: block;
+    border-radius: 0;
+}
+
+.proshop-card img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    transition: transform 0.5s ease;
+}
+
+.proshop-card-overlay {
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 160px;
+    background: linear-gradient(180deg, rgba(17, 17, 17, 0.00) 0%, rgba(17, 17, 17, 0.80) 100%);
+    display: flex;
+    align-items: flex-end;
+    justify-content: center;
+    padding: 40px 20px;
+    z-index: 2;
+}
+
+.proshop-card-title {
+    color: #FFF;
+    font-family: "League Spartan", sans-serif;
+    font-size: 32px;
+    font-weight: 600;
+    line-height: 40px;
+    text-transform: uppercase;
+    text-align: center;
+    margin: 0;
+}
+
+
 
 @media screen and (max-width: 1600px) {
   .right-nav .right-list {
@@ -1987,6 +2052,12 @@ line-height: 28px;
     margin-top: 60px;
   }
 
+    .proshop-card {
+        height: 400px;
+    }
+    .proshop-card-title {
+        font-size: 24px;
+    }
 
 
 
